--- a/belgeler/kap-olcekleri/5p.html
+++ b/belgeler/kap-olcekleri/5p.html
@@ -24,54 +24,54 @@
   <![endif]-->
 </head>
 <body>
-<div class="header" data-deveb~="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
+<div class="header" data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
-<div class="kap ortala" data-deveb~="24p">
-  <div data-deveb~="23 24p">
-    <div data-deveb~="24">
+<div class="kap ortala" data-deveb="24p">
+  <div data-deveb="23 24p">
+    <div data-deveb="24">
       <h1>Kap Ölçekleri: 5p</h1>
       <p class="beri-alt-2">Uyumluluk özelliği nedeniyle gnl, byk, ort, kçk, ufk ekran ölçekleriyle birlikte kullanılır.</p>
     </div>
 
-    <div data-deveb~="5 5p">
+    <div data-deveb="5 5p">
 
-      <div data-deveb~="1"><div class="kutu kutu-genel">data-deveb~="1"</div></div>
-      <div data-deveb~="1"><div class="kutu kutu-genel">data-deveb~="1"</div></div>
-      <div data-deveb~="1"><div class="kutu kutu-genel">data-deveb~="1"</div></div>
-      <div data-deveb~="1"><div class="kutu kutu-genel">data-deveb~="1"</div></div>
-      <div data-deveb~="1"><div class="kutu kutu-genel">data-deveb~="1"</div></div>
+      <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="1"</div></div>
+      <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="1"</div></div>
+      <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="1"</div></div>
+      <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="1"</div></div>
+      <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="1"</div></div>
 
-      <div data-deveb~="1"><div class="kutu kutu-genel">data-deveb~="1"</div></div>
-      <div data-deveb~="1"><div class="kutu kutu-genel">data-deveb~="1"</div></div>
-      <div data-deveb~="1"><div class="kutu kutu-genel">data-deveb~="1"</div></div>
-      <div data-deveb~="2"><div class="kutu kutu-genel">data-deveb~="2"</div></div>
+      <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="1"</div></div>
+      <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="1"</div></div>
+      <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="1"</div></div>
+      <div data-deveb="2"><div class="kutu kutu-genel">data-deveb="2"</div></div>
 
-      <div data-deveb~="1"><div class="kutu kutu-genel">data-deveb~="1"</div></div>
-      <div data-deveb~="1"><div class="kutu kutu-genel">data-deveb~="1"</div></div>
-      <div data-deveb~="3"><div class="kutu kutu-genel">data-deveb~="3"</div></div>
+      <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="1"</div></div>
+      <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="1"</div></div>
+      <div data-deveb="3"><div class="kutu kutu-genel">data-deveb="3"</div></div>
 
-      <div data-deveb~="1"><div class="kutu kutu-genel">data-deveb~="1"</div></div>
-      <div data-deveb~="2"><div class="kutu kutu-genel">data-deveb~="2"</div></div>
-      <div data-deveb~="2"><div class="kutu kutu-genel">data-deveb~="2"</div></div>
+      <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="1"</div></div>
+      <div data-deveb="2"><div class="kutu kutu-genel">data-deveb="2"</div></div>
+      <div data-deveb="2"><div class="kutu kutu-genel">data-deveb="2"</div></div>
 
-      <div data-deveb~="1"><div class="kutu kutu-genel">data-deveb~="1"</div></div>
-      <div data-deveb~="4"><div class="kutu kutu-genel">data-deveb~="4"</div></div>
+      <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="1"</div></div>
+      <div data-deveb="4"><div class="kutu kutu-genel">data-deveb="4"</div></div>
 
-      <div data-deveb~="2"><div class="kutu kutu-genel">data-deveb~="2"</div></div>
-      <div data-deveb~="3"><div class="kutu kutu-genel">data-deveb~="3"</div></div>
+      <div data-deveb="2"><div class="kutu kutu-genel">data-deveb="2"</div></div>
+      <div data-deveb="3"><div class="kutu kutu-genel">data-deveb="3"</div></div>
 
-      <div data-deveb~="5"><div class="kutu kutu-genel">data-deveb~="5"</div></div>
+      <div data-deveb="5"><div class="kutu kutu-genel">data-deveb="5"</div></div>
 
-      <div data-deveb~="2 2p"><div class="kutu kutu-genel">data-deveb~="2 2p"</div></div>
-      <div data-deveb~="6 6p"><div class="kutu kutu-genel">data-deveb~="6 6p"</div></div>
-      <div data-deveb~="3 6p"><div class="kutu kutu-genel">data-deveb~="3 6p"</div></div>
-      <div data-deveb~="3 6p"><div class="kutu kutu-genel">data-deveb~="3 6p"</div></div>
+      <div data-deveb="2 2p"><div class="kutu kutu-genel">data-deveb="2 2p"</div></div>
+      <div data-deveb="6 6p"><div class="kutu kutu-genel">data-deveb="6 6p"</div></div>
+      <div data-deveb="3 6p"><div class="kutu kutu-genel">data-deveb="3 6p"</div></div>
+      <div data-deveb="3 6p"><div class="kutu kutu-genel">data-deveb="3 6p"</div></div>
 
     </div>
   </div>
 </div>
 
-<div data-deveb~="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
+<div data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <script>w3.includeHTML();</script>
 </body>
