--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -24,11 +24,11 @@
   <![endif]-->
 </head>
 <body>
-<div class="header" data-deveb~="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-<div data-deveb="ortada" data-deveb~="24p">
-  <div data-deveb="kaplama" data-deveb~="23" data-orta="16 24p">
+<div class="header" data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
+<div data-deveb="ortada" data-deveb="24p">
+  <div data-deveb="kaplama" data-deveb="23" data-orta="16 24p">
 
-    <h1>Kap Örgüsü <span data-deveb~="metin-dikkat gri">(s0.9)</span></h1>
+    <h1>Kap Örgüsü <span data-deveb="metin-dikkat gri">(s0.9)</span></h1>
 
     <p>İşte bu! 1'den 24'e kadar olan sütun düzenlerini aynı anda kullanabilmek artık hayal değil. Deveb kap örgüsü bunu en hızlı şekilde yepyeni özelliklerle birlikte kullanımınıza sunuyor. Beğendiniz mi? O zaman kap örgüsünü öğrenerek bir başlangıç yapın. Unutmadan, artık öncelik küçük ekranlara ait.</p>
 
@@ -45,9 +45,9 @@
     <p>Kap örgüsünde oluşturulan bazı kavramlar vardır. Bu kavramları yazılışlarına göre üç farklı şekilde ele alırız. Her kavramın işlevi yerine göre bir işleyiş kazanır. Biliyor olmanız gereken kullanım kavramları:</p>
 
     <ul data-deveb>
-      <li>"<span data-deveb~="metin-dikkat">SAYI SAYIp</span>"</li>
-      <li>"<span data-deveb~="metin-dikkat">SAYI</span>"</li>
-      <li>"<span data-deveb~="metin-dikkat">SAYIp</span>"</li>
+      <li>"<span data-deveb="metin-dikkat">SAYI SAYIp</span>"</li>
+      <li>"<span data-deveb="metin-dikkat">SAYI</span>"</li>
+      <li>"<span data-deveb="metin-dikkat">SAYIp</span>"</li>
     </ul>
 
     <h2>Kap Örgüsü Kavramları</h2>
@@ -76,73 +76,73 @@
 
     <p>Deveb kap örgüsünün konumlama özellikleri oluşturulmuş birkaç sınıfla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
 
-    <h3>Konumlama: <span data-deveb~="metin-dikkat">taşma</span></h3>
+    <h3>Konumlama: <span data-deveb="metin-dikkat">taşma</span></h3>
     <p>"taşma" sınıfı bir HTML etiketindeki içeriğin dışarı taşmasını engeller.</p>
 
-    <h3>Konumlama: <span data-deveb~="metin-dikkat">kayma</span></h3>
+    <h3>Konumlama: <span data-deveb="metin-dikkat">kayma</span></h3>
     <p>"kayma" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
 
-    <h3>Konumlama: <span data-deveb~="metin-dikkat">solda | ortada | sağda</span></h3>
+    <h3>Konumlama: <span data-deveb="metin-dikkat">solda | ortada | sağda</span></h3>
     <p>"solda" sınıfı bir HTML etiketindeki içeriği sola dayalı olarak gösterir.</p>
     <p>"ortada" sınıfı bir HTML etiketindeki içeriği ortalanmış olarak gösterir.</p>
     <p>"sağda" sınıfı bir HTML etiketindeki içeriği sağa dayalı olarak gösterir.</p>
-    <div data-deveb~="1 1p">
-      <iframe data-deveb~="ort-1 2p" data-deveb~="1 1p" height="300" src="//jsfiddle.net/deveb/r7gqcscx/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-      <iframe data-deveb~="ort-1 2p" data-deveb~="1 1p" height="300" src="//jsfiddle.net/deveb/r7gqcscx/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <div data-deveb="1 1p">
+      <iframe data-deveb="ort-1 2p" data-deveb="1 1p" height="300" src="//jsfiddle.net/deveb/r7gqcscx/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+      <iframe data-deveb="ort-1 2p" data-deveb="1 1p" height="300" src="//jsfiddle.net/deveb/r7gqcscx/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
     </div>
 
-    <h3>Konumlama: <span data-deveb~="metin-dikkat">üstte | göbekte | altta</span></h3>
+    <h3>Konumlama: <span data-deveb="metin-dikkat">üstte | göbekte | altta</span></h3>
     <p>"üstte" sınıfı bir HTML etiketindeki içeriği başa doğru dayalı olarak gösterir.</p>
     <p>"göbekte" sınıfı bir HTML etiketindeki içeriği dikey konumda ortalanmış gösterir.</p>
     <p>"altta" sınıfı bir HTML etiketindeki içeriği en aşağıya dayalı olarak gösterir.</p>
-    <div data-deveb~="1 1p">
-      <iframe data-deveb~="ort-1 2p" data-deveb~="1 1p" height="300" src="//jsfiddle.net/deveb/Lya0jeoa/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-      <iframe data-deveb~="ort-1 2p" data-deveb~="1 1p" height="300" src="//jsfiddle.net/deveb/Lya0jeoa/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <div data-deveb="1 1p">
+      <iframe data-deveb="ort-1 2p" data-deveb="1 1p" height="300" src="//jsfiddle.net/deveb/Lya0jeoa/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+      <iframe data-deveb="ort-1 2p" data-deveb="1 1p" height="300" src="//jsfiddle.net/deveb/Lya0jeoa/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
     </div>
 
 
-    <h3>Konumlama: <span data-deveb~="metin-dikkat">ger</span></h3>
+    <h3>Konumlama: <span data-deveb="metin-dikkat">ger</span></h3>
     <p>"ger" sınıfı bir HTML etiketindeki içeriği en sağa ve sola yayarak gösterir.</p>
 
-    <h3>Konumlama: <span data-deveb~="metin-dikkat">yay</span></h3>
+    <h3>Konumlama: <span data-deveb="metin-dikkat">yay</span></h3>
     <p>"yay" sınıfı bir HTML etiketindeki içeriği sağa sola doğru yayarak gösterir.</p>
 
-    <h3>Konumlama: <span data-deveb~="metin-dikkat">uzun</span></h3>
+    <h3>Konumlama: <span data-deveb="metin-dikkat">uzun</span></h3>
     <p>"uzun" sınıfı bir HTML etiketindeki içeriği aşağıdan yukarıya uzatarak gösterir.</p>
 
-    <h3>Konumlama: <span data-deveb~="metin-dikkat">uzun-ol</span></h3>
+    <h3>Konumlama: <span data-deveb="metin-dikkat">uzun-ol</span></h3>
     <p>"uzun-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin durumuna göre uzatır.</p>
 
-    <h3>Konumlama: <span data-deveb~="metin-dikkat">çizgide</span></h3>
+    <h3>Konumlama: <span data-deveb="metin-dikkat">çizgide</span></h3>
     <p>"çizgide" sınıfı bir HTML etiketindeki içeriği bir çizgiye dizerek gösterir.</p>
 
-    <h3>Konumlama: <span data-deveb~="metin-dikkat">çizgide-ol</span></h3>
+    <h3>Konumlama: <span data-deveb="metin-dikkat">çizgide-ol</span></h3>
     <p>"çizgide-ol" sınıfı bir buldunduğu etiketi bir çizgi konumuna dizerek gösterir.</p>
 
-    <h3>Konumlama: <span data-deveb~="metin-dikkat">ters-dizi</span></h3>
+    <h3>Konumlama: <span data-deveb="metin-dikkat">ters-dizi</span></h3>
     <p>"ters-dizi" sınıfı bir HTML etiketindeki içeriği ters yönde dizerek gösterir.</p>
 
-    <h3>Konumlama: <span data-deveb~="metin-dikkat">ters-satır</span></h3>
+    <h3>Konumlama: <span data-deveb="metin-dikkat">ters-satır</span></h3>
     <p>"ters-satır" sınıfı bir HTML etiketindeki satırları aynalı olarak gösterir.</p>
 
-    <h3>Konumlama: <span data-deveb~="metin-dikkat">ters-sütun</span></h3>
+    <h3>Konumlama: <span data-deveb="metin-dikkat">ters-sütun</span></h3>
     <p>"ters-sütun" sınıfı bir HTML etiketindeki sütunları aynalı olarak gösterir.</p>
 
-    <h3>Konumlama: <span data-deveb~="metin-dikkat">üstte-ol | göbekte-ol | altta-ol</span></h3>
+    <h3>Konumlama: <span data-deveb="metin-dikkat">üstte-ol | göbekte-ol | altta-ol</span></h3>
     <p>"üstte-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin üstüne dayalı olarak gösterir.</p>
     <p>"göbekte-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin dikey konumunda ortalanmış olarak gösterir.</p>
     <p>"altta-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin aşağısına dayalı olarak gösterir.</p>
-    <div data-deveb~="1 1p">
-      <iframe data-deveb~="ort-1 2p" data-deveb~="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-      <iframe data-deveb~="ort-1 2p" data-deveb~="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <div data-deveb="1 1p">
+      <iframe data-deveb="ort-1 2p" data-deveb="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+      <iframe data-deveb="ort-1 2p" data-deveb="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
     </div>
     <h2>Konular</h2>
-    <div data-deveb~="24">
-      <div data-deveb~="1o">    <div class="kutu kutu-genel metin-olumlu">      Ana Yapı    </div>  </div>
-      <div data-deveb~="1o">    <div class="kutu kutu-genel metin-olumlu">      Kavramlar    </div>  </div>
-      <div data-deveb~="1o">    <div class="kutu kutu-genel metin-olumlu">      Özellikler    </div>  </div>
-      <div data-deveb~="1o">    <div class="kutu kutu-genel metin-olumlu">      Bilinmesi Gerekenler    </div>  </div>
-      <div data-deveb~="1o">    <div class="kutu kutu-genel metin-olumlu">      Örnekler    </div>  </div>
+    <div data-deveb="24">
+      <div data-deveb="1o">    <div class="kutu kutu-genel metin-olumlu">      Ana Yapı    </div>  </div>
+      <div data-deveb="1o">    <div class="kutu kutu-genel metin-olumlu">      Kavramlar    </div>  </div>
+      <div data-deveb="1o">    <div class="kutu kutu-genel metin-olumlu">      Özellikler    </div>  </div>
+      <div data-deveb="1o">    <div class="kutu kutu-genel metin-olumlu">      Bilinmesi Gerekenler    </div>  </div>
+      <div data-deveb="1o">    <div class="kutu kutu-genel metin-olumlu">      Örnekler    </div>  </div>
     </div>
 
 <div>
@@ -150,26 +150,26 @@
   <h2>Ana Yapı</h2>
   <p>Kap örgüsünün ana yapısı üç ana yöntemden oluşmaktadır. Bölme yöntemi, parça yöntemi, oran yöntemi isimleriyle ayırdığımız bu yöntemler hakkında ayrıntılı bilgiyi bu belgede okuyabilirsiniz.</p>
   </div>
-  <div class="beri-üst-1 beri-alt-1" data-deveb~="24">
+  <div class="beri-üst-1 beri-alt-1" data-deveb="24">
     <h3>Bölme Yöntemi</h3>
-    <p>Bir genişliği eşit ölçülerde bölmek istiyorsak bölme yöntemini kullanırız. Bu yöntemi kullanmak çok basittir. Temel mantığımız ana etikete bölmek istediğimiz kadar değeri örnek:"2p" şeklinde ekran ölçeklerine yazarız. Yavru etikete ise "1" değerini yazarız. Bundan sonra "1" değerini ekran ölçeklerine yazarak oluşturduğunuz etiket başta belirtiğiniz değere göre eşit olarak bölünecektir. Aşağıdaki örnekte 5 bölmeden oluşan bir kap yapısı oluşturuldu. Bunun için kap örgüsünde şu sınıf yazılır; <span class="metin-olumlu">data-deveb~="</span><span class="metin-belirsiz">5 5p</span><span class="metin-olumlu">"</span><br><br> Yavru sınıflarda <span class="metin-olumlu">data-deveb~="</span><span class="metin-belirsiz">1</span><span class="metin-olumlu">"</span> doğru şekilde tanımlandıysa bu sınıfın olduğu etiket ana etikette belirtilen bölme değerine göre genişlik değeri alacaktır. Örnekte görüldüğü gibi.</p>
-    <iframe data-deveb~="1 2p" height="300" src="//jsfiddle.net/deveb/dshjqLjn/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-    <iframe data-deveb~="1 2p" height="300" src="//jsfiddle.net/deveb/dshjqLjn/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <p>Bir genişliği eşit ölçülerde bölmek istiyorsak bölme yöntemini kullanırız. Bu yöntemi kullanmak çok basittir. Temel mantığımız ana etikete bölmek istediğimiz kadar değeri örnek:"2p" şeklinde ekran ölçeklerine yazarız. Yavru etikete ise "1" değerini yazarız. Bundan sonra "1" değerini ekran ölçeklerine yazarak oluşturduğunuz etiket başta belirtiğiniz değere göre eşit olarak bölünecektir. Aşağıdaki örnekte 5 bölmeden oluşan bir kap yapısı oluşturuldu. Bunun için kap örgüsünde şu sınıf yazılır; <span class="metin-olumlu">data-deveb="</span><span class="metin-belirsiz">5 5p</span><span class="metin-olumlu">"</span><br><br> Yavru sınıflarda <span class="metin-olumlu">data-deveb="</span><span class="metin-belirsiz">1</span><span class="metin-olumlu">"</span> doğru şekilde tanımlandıysa bu sınıfın olduğu etiket ana etikette belirtilen bölme değerine göre genişlik değeri alacaktır. Örnekte görüldüğü gibi.</p>
+    <iframe data-deveb="1 2p" height="300" src="//jsfiddle.net/deveb/dshjqLjn/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <iframe data-deveb="1 2p" height="300" src="//jsfiddle.net/deveb/dshjqLjn/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 
   </div>
-  <div class="beri-üst-1 beri-alt-1" data-deveb~="24">
+  <div class="beri-üst-1 beri-alt-1" data-deveb="24">
     <h3>Parça Yöntemi</h3>
     <p>Bulunduğu genişliği parçalara ayırarak kullanma yöntemidir. 24 farklı parça aralığı varsayılan olarak ayarlanmıştır. 1p, 2p, 3p, 4p, 5p, 6p, 8p, 7p, 8p, 9p, 10p, 11p, 12p, 13p, 14p, 15p, 16p, 17p, 18p, 19p, 20p, 21p, 22p, 23p, 24p olarak istediğiniz ekran ölçeğinde (gnl, byk, ort, ufk) kullanabilirsiniz. Örneğin 10p parça aralığını kullanacaksanız genişliği 10 eşit parçaların toplamına kadar kullanmak istediğinizi anlarız. Bununla birlikte farklı parça aralıklarını bir arada kullanabilme özelliği vardır. Buradan anlamanızı beklediğimiz, HTML dosyasının bir bölümünde 10p kullanıyorken, diğer bir bölümünde 16p kullanabilirsiniz.</p>
     <h4 class="beri-alt-1 beri-üst-1">Kullanımı</h4>
-    <p>Kap örgüsü ile ilgili bir işlem yapacağınız zaman data-deveb~=" " ekran tipinde ölçek her zaman belirtilmelidir. Bir genişliği tüm ekran ölçeklerinde 24 parçaya ayırarak kullanmak için sınıfı şöyle yazmalısınız;<span class="metin-olumlu">data-deveb~="</span><span class="metin-belirsiz">24 24p</span><span class="metin-olumlu">"</span>. Böyle yazdığınız zaman bulunduğu genişliği baştan sonra kadar kaplayacaktır. Eğer 24 parçanın yarısı kadar kaplamak istiyorsanız; <span class="metin-olumlu">data-deveb~="</span><span class="metin-belirsiz">12 24p</span><span class="metin-olumlu">"</span> veya <span class="metin-olumlu">data-deveb~="</span><span class="metin-belirsiz">24p 12</span><span class="metin-olumlu">"</span> şeklinde yazmanız gerekmektedir. Buradan yola çıkarak diğer parça aralıklarını kullanabilirsiniz.</p>
-    <iframe data-deveb~="1 2p" height="300" src="//jsfiddle.net/deveb/2wa4s4jf/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-    <iframe data-deveb~="1 2p" height="300" src="//jsfiddle.net/deveb/2wa4s4jf/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <p>Kap örgüsü ile ilgili bir işlem yapacağınız zaman data-deveb=" " ekran tipinde ölçek her zaman belirtilmelidir. Bir genişliği tüm ekran ölçeklerinde 24 parçaya ayırarak kullanmak için sınıfı şöyle yazmalısınız;<span class="metin-olumlu">data-deveb="</span><span class="metin-belirsiz">24 24p</span><span class="metin-olumlu">"</span>. Böyle yazdığınız zaman bulunduğu genişliği baştan sonra kadar kaplayacaktır. Eğer 24 parçanın yarısı kadar kaplamak istiyorsanız; <span class="metin-olumlu">data-deveb="</span><span class="metin-belirsiz">12 24p</span><span class="metin-olumlu">"</span> veya <span class="metin-olumlu">data-deveb="</span><span class="metin-belirsiz">24p 12</span><span class="metin-olumlu">"</span> şeklinde yazmanız gerekmektedir. Buradan yola çıkarak diğer parça aralıklarını kullanabilirsiniz.</p>
+    <iframe data-deveb="1 2p" height="300" src="//jsfiddle.net/deveb/2wa4s4jf/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <iframe data-deveb="1 2p" height="300" src="//jsfiddle.net/deveb/2wa4s4jf/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
   </div>
-  <div class="beri-üst-1 beri-alt-1" data-deveb~="24">
+  <div class="beri-üst-1 beri-alt-1" data-deveb="24">
     <h3>Oran Yöntemi</h3>
-    <p>Bir genişlikte birbirlerinin katları olacak şekilde oranlar kurabilirsiniz. Örneğin 1 3 1 oranında bir düzen yazabilirsiniz. Oran yöntemini <span class="metin-olumlu">data-deveb~="</span><span class="metin-belirsiz">1o</span><span class="metin-olumlu">"</span> şeklinde yazarak kullanabilirsiniz</p>
-    <iframe data-deveb~="1 2p" height="300" src="//jsfiddle.net/deveb/hsr989pz/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-    <iframe data-deveb~="1 2p" height="300" src="//jsfiddle.net/deveb/hsr989pz/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <p>Bir genişlikte birbirlerinin katları olacak şekilde oranlar kurabilirsiniz. Örneğin 1 3 1 oranında bir düzen yazabilirsiniz. Oran yöntemini <span class="metin-olumlu">data-deveb="</span><span class="metin-belirsiz">1o</span><span class="metin-olumlu">"</span> şeklinde yazarak kullanabilirsiniz</p>
+    <iframe data-deveb="1 2p" height="300" src="//jsfiddle.net/deveb/hsr989pz/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <iframe data-deveb="1 2p" height="300" src="//jsfiddle.net/deveb/hsr989pz/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
   </div>
 </div>
 
@@ -180,7 +180,7 @@
 Her bir ismin kısaltılmış yazılışları vardır.</p>
 
 
-<table class="tablo" data-deveb~="1 1p">
+<table class="tablo" data-deveb="1 1p">
   <thead>
     <tr>
       <th>Ekran Çeşitleri</th>
@@ -219,7 +219,7 @@ Her bir ismin kısaltılmış yazılışları vardır.</p>
 </div>
 </div>
 
-<div data-deveb~="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
+<div data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
 <script src="https://data-deveb.github.io/assets/js/not-for-deveb-w3.js"></script>
 <script>w3.includeHTML();</script>
 </body>
