--- a/belgeler/resim-orgusu.html
+++ b/belgeler/resim-orgusu.html
@@ -24,20 +24,20 @@
   <![endif]-->
 </head>
 <body>
-  <div class="header" data-deveb~="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-<div  class="ortala" data-deveb~="23 24p">
-<div class="kaplama ortalat" data-deveb~="24" data-deveb~="ufk-24">
+  <div class="header" data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
+<div  class="ortala" data-deveb="23 24p">
+<div class="kaplama ortalat" data-deveb="24" data-deveb="ufk-24">
 
-  <div class="dolgu-1" data-deveb~="8"><img data-resim="daire" src="http://placehold.it/100x100"></div>
-  <div class="dolgu-1" data-deveb~="8"><img data-resim="kare" src="http://placehold.it/100x100"></div>
-  <div class="dolgu-1" data-deveb~="8"><img data-resim="yuvarlak" src="http://placehold.it/100x100"></div>
-  <div class="dolgu-1" data-deveb~="8"><img data-resim="yuvarlak-1" src="http://placehold.it/100x100"></div>
-  <div class="dolgu-1" data-deveb~="8"><img data-resim="yuvarlak-2" src="http://placehold.it/100x100"></div>
-  <div class="dolgu-1" data-deveb~="8"><img data-resim="yuvarlak-3" src="http://placehold.it/100x100"></div>
+  <div class="dolgu-1" data-deveb="8"><img data-resim="daire" src="http://placehold.it/100x100"></div>
+  <div class="dolgu-1" data-deveb="8"><img data-resim="kare" src="http://placehold.it/100x100"></div>
+  <div class="dolgu-1" data-deveb="8"><img data-resim="yuvarlak" src="http://placehold.it/100x100"></div>
+  <div class="dolgu-1" data-deveb="8"><img data-resim="yuvarlak-1" src="http://placehold.it/100x100"></div>
+  <div class="dolgu-1" data-deveb="8"><img data-resim="yuvarlak-2" src="http://placehold.it/100x100"></div>
+  <div class="dolgu-1" data-deveb="8"><img data-resim="yuvarlak-3" src="http://placehold.it/100x100"></div>
 
 </div>
 </div>
-<div data-deveb~="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
+<div data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
 <script src="https://data-deveb.github.io/assets/js/not-for-deveb-w3.js"></script>
 <script>w3.includeHTML();</script>
 </body>
