--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -24,76 +24,76 @@
   <![endif]-->
 </head>
 <body>
-  <div data-deveb~="1 1p" class="header" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
+  <div data-deveb="1 1p" class="header" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
-<div data-deveb="kaplama ortada" data-deveb~="24p">
-  <div data-deveb~="23 24p">
-    <div data-deveb~="24">
+<div data-deveb="kaplama ortada" data-deveb="24p">
+  <div data-deveb="23 24p">
+    <div data-deveb="24">
       <h1>Tarayıcı Desteği</h1>
       <p class="beri-alt-2">Deveb önyüz iskeletini destekleyen tarayıcılar</p>
     </div>
 
-    <div data-deveb~="24">
-      <div data-deveb~="24">
+    <div data-deveb="24">
+      <div data-deveb="24">
         <h2>Masaüstü Desteği</h2>
         Destekler güncel sürümlere göre belirtilmiştir.
       </div>
-      <div data-deveb~="24" data-deveb="üstte">
-        <div data-deveb~="6 6p" data-deveb~="ufk-1 6p">
-          <div data-deveb~="3" data-deveb~="ufk-6">
+      <div data-deveb="24" data-deveb="üstte">
+        <div data-deveb="6 6p" data-deveb="ufk-1 6p">
+          <div data-deveb="3" data-deveb="ufk-6">
             <div class="kutu kutu-genel">
               <i class="fa fa-chrome" aria-hidden="true"></i> Chrome
             </div>
           </div>
-          <div data-deveb~="3" data-deveb~="ufk-6">
+          <div data-deveb="3" data-deveb="ufk-6">
             <div class="kutu kutu-genel metin-olumlu">
               <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
             </div>
           </div>
         </div>
-        <div data-deveb~="6 6p" data-deveb~="ufk-1 6p">
-          <div data-deveb~="3" data-deveb~="ufk-6">
+        <div data-deveb="6 6p" data-deveb="ufk-1 6p">
+          <div data-deveb="3" data-deveb="ufk-6">
           <div class="kutu kutu-genel">
             <i class="fa fa-firefox" aria-hidden="true"></i> Firefox
           </div>
           </div>
-          <div data-deveb~="3" data-deveb~="ufk-6">
+          <div data-deveb="3" data-deveb="ufk-6">
           <div class="kutu kutu-genel metin-olumlu">
             <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
           </div>
           </div>
         </div>
-        <div data-deveb~="6 6p" data-deveb~="ufk-1 6p">
-          <div data-deveb~="3" data-deveb~="ufk-6">
+        <div data-deveb="6 6p" data-deveb="ufk-1 6p">
+          <div data-deveb="3" data-deveb="ufk-6">
           <div class="kutu kutu-genel">
             <i class="fa fa-opera" aria-hidden="true"></i> Opera
           </div>
           </div>
-          <div data-deveb~="3" data-deveb~="ufk-6">
+          <div data-deveb="3" data-deveb="ufk-6">
           <div class="kutu kutu-genel metin-olumlu">
             <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
           </div>
           </div>
         </div>
-        <div data-deveb~="6 6p" data-deveb~="ufk-1 6p">
-          <div data-deveb~="3" data-deveb~="ufk-6">
+        <div data-deveb="6 6p" data-deveb="ufk-1 6p">
+          <div data-deveb="3" data-deveb="ufk-6">
           <div class="kutu kutu-genel">
             <i class="fa fa-safari" aria-hidden="true"></i> Safari
           </div>
           </div>
-          <div data-deveb~="3" data-deveb~="ufk-6">
+          <div data-deveb="3" data-deveb="ufk-6">
           <div class="kutu kutu-genel metin-olumlu">
             <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
           </div>
           </div>
         </div>
-        <div data-deveb~="6 6p" data-deveb~="ufk-1 6p">
-          <div data-deveb~="3" data-deveb~="ufk-6">
+        <div data-deveb="6 6p" data-deveb="ufk-1 6p">
+          <div data-deveb="3" data-deveb="ufk-6">
             <div class="kutu kutu-genel">
               <i class="fa fa-internet-explorer" aria-hidden="true"></i> IE 10+
             </div>
           </div>
-          <div data-deveb~="3" data-deveb~="ufk-6">
+          <div data-deveb="3" data-deveb="ufk-6">
             <div class="kutu kutu-genel metin-belirsiz">
               <i class="fa fa-times" aria-hidden="true"></i> Belirsiz
             </div>
@@ -105,13 +105,13 @@
             </div>
           </div>
         </div>
-        <div data-deveb~="6 6p" data-deveb~="ufk-1 6p">
-          <div data-deveb~="3" data-deveb~="ufk-6">
+        <div data-deveb="6 6p" data-deveb="ufk-1 6p">
+          <div data-deveb="3" data-deveb="ufk-6">
             <div class="kutu kutu-genel">
               <i class="fa fa-edge" aria-hidden="true"></i> Edge
             </div>
           </div>
-          <div data-deveb~="3" data-deveb~="ufk-6">
+          <div data-deveb="3" data-deveb="ufk-6">
             <div class="kutu kutu-genel metin-belirsiz">
               <i class="fa fa-times" aria-hidden="true"></i> Belirsiz
             </div>
@@ -129,7 +129,7 @@
   </div>
 </div>
 
-<div data-deveb~="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
+<div data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
 <script src="https://data-deveb.github.io/assets/js/not-for-deveb-w3.js"></script>
 <script>w3.includeHTML();</script>
 </body>
