--- a/belgeler/belgeler.html
+++ b/belgeler/belgeler.html
@@ -24,27 +24,27 @@
   <![endif]-->
 </head>
 <body>
-<div class="header" data-deveb~="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-<div class="ortada" data-deveb~="24p" data-deveb~="ort-24p">
-  <div data-deveb="kaplama" data-deveb~="23" data-deveb~="ort-16">
-    <div data-deveb~="4 4p">
-      <div data-deveb~="1">
+<div class="header" data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
+<div class="ortada" data-deveb="24p" data-deveb="ort-24p">
+  <div data-deveb="kaplama" data-deveb="23" data-deveb="ort-16">
+    <div data-deveb="4 4p">
+      <div data-deveb="1">
         <div class="kutu kutu-genel"><a href="#">Kap Örgüsü</a></div>
       </div>
-      <div data-deveb~="1">
+      <div data-deveb="1">
         <div class="kutu kutu-genel"><a href="#">Renk Örgüsü</a></div>
       </div>
-      <div data-deveb~="1">
+      <div data-deveb="1">
         <div class="kutu kutu-genel"><a href="#">Sekme Örgüsü</a></div>
       </div>
-      <div data-deveb~="1">
+      <div data-deveb="1">
         <div class="kutu kutu-genel"><a href="#">Resim Örgüsü</a></div>
       </div>
     </div>
   </div>
 </div>
 
-<div data-deveb~="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
+<div data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
 <script src="https://data-deveb.github.io/assets/js/not-for-deveb-w3.js"></script>
 <script>w3.includeHTML();</script>
 </body>
